--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.4.3",
-    "vue": "^2.6.10",
+    "element-ui": "^2.13.0",
+    "vue": "^2.6.11",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "lint-staged": "^9.4.3",
+    "node-forge": "^0.9.1",
     "vue-template-compiler": "^2.6.10"
   },
   "gitHooks": {
